--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "drupal/admin_toolbar": "^3.4",
         "drupal/bootstrap": "^3.29",
         "drupal/bootstrap5": "^3.0",
+        "drupal/conditional_fields": "^4.0@alpha",
         "drupal/core-composer-scaffold": "^10.1",
         "drupal/core-project-message": "^10.1",
         "drupal/core-recommended": "^10.1",
