--- a/web/themes/custom/sub_theme/sub_theme.info.yml
+++ b/web/themes/custom/sub_theme/sub_theme.info.yml
@@ -4,3 +4,18 @@ base theme: bootstrap
 description: A flexible theme for FE test.
 package: Custom
 core_version_requirement: ^10
+libraries:
+  - sub_theme/global
+
+regions:
+  header: 'Header'
+  primary_menu: 'Primary menu'
+  secondary_menu: 'Secondary menu'
+  page_top: 'Page top'
+  page_bottom: 'Page bottom'
+  featured: 'Featured'
+  breadcrumb: 'Breadcrumb'
+  content: 'Content'
+  sidebar_first: 'Sidebar first'
+  sidebar_second: 'Sidebar second'
+  footer: 'Footer'
